--- a/srcs/.env
+++ b/srcs/.env
@@ -1,3 +1,13 @@
-MYSQL_ROOT_PASSWORD="1136"
+
+DB_ROOT_PASSWORD="1136"
+DB_NAME="wp"
+DB_USER="wp_user"
+DB_USER_PASSWORD="42school"
+DB_ADMIN="superuser"
+DB_ADMIN_PASSWORD="42school"
+DB_TEST="agus"
+DB_TEST_PASS="1234"
+
+
 
 
