all container done , not tested yet

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,10 +1,11 @@
-DB_ROOT_PASSWORD="1136"
-DB_NAME="wp"
-DB_USER="wp_user"
-DB_USER_PASSWORD="42school"
-DB_ADMIN="superuser"
-DB_ADMIN_PASSWORD="42school"
-
+DB_ROOT_PASSWORD=1136 
+DB_NAME=wp
+DB_USER=wp_user
+DB_USER_PASSWORD=42school
+DB_ADMIN=superuser
+DB_ADMIN_PASSWORD=42school
+DB_PASSWORD=42school
+DB_HOST=maria-db
 
 
 
