--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,25 +1,50 @@
-
 services:
-  mariadb:
-    container_name: mariadb
+  maria-db:
+    container_name: dbase
     build:
       context: ./requirements/mariadb/
-    image: mariadb
-    ports:
-      - 3306:3306
+    image: dbase
     volumes:
       - db:/var/lib/mysql
     networks:
-      - custom-net 
+      - inception
+    env_file:
+      - .env    
+ 
+  wordpress:
+    container_name: wordpress
+    build:
+      context: ./requirements/wordpress/
+    depends_on:
+      - maria-db
+    image: wp
+    volumes:
+      - wp:/var/www/html
+    networks:
+      - inception
     env_file:
       - .env
-    
+  
+  nginx:
+    container_name: ngx
+    build:
+      context: ./requirements/nginx
+    depends_on: 
+      - wordpress
+    image: nginx
+    ports:
+      - 443:443 
+    volumes:
+      - wp:/var/www/html
+    networks:
+      - inception
 
   
 
 
 networks:
-  custom-net:
+  inception:
+    name: inception
     driver: bridge
 
 volumes:
