--- a/srcs/requirements/nginx/conf/apaterno.42.fr.conf
+++ b/srcs/requirements/nginx/conf/apaterno.42.fr.conf
@@ -5,14 +5,38 @@ server {
 }
 
 server {
- listen 	443 ssl;
- server_name	apaterno.42.fr;
- root		/var/www/html/;	
- ssl_protocols TLSv1.2 TLSv1.3;
- ssl_prefer_server_ciphers on;
- ssl_certificate /etc/nginx/certs/apaterno.42.fr.crt;
- ssl_certificate_key /etc/nginx/certs/apaterno.42.fr.key; 
- access_log	/var/log/nginx/access.log;
- error_log	/var/log/nginx/error.log;
+ 	listen 		443 ssl;
+ 	server_name	apaterno.42.fr;
+
+	root		/var/www/html/;	
+ 	index		index.php index.html
+		
+	ssl_protocols TLSv1.2 TLSv1.3;
+# 	ssl_prefer_server_ciphers on;
+ 	ssl_certificate /etc/nginx/certs/apaterno.42.fr.crt;
+ 	ssl_certificate_key /etc/nginx/certs/apaterno.42.fr.key; 
+ 
+	access_log	/var/log/nginx/access.log;
+ 	error_log	/var/log/nginx/error.log;
+
+	location / {
+		try_files $uri $uri/ /index.php?$args;
+	}
+
+	location ~* \.(css|js|jpg|png|gif|ico)$ {
+	     	root /var/www/html;
+		access_log off;
+		expires max;
+ 	}
+
+	location ~ \.php$ {
+	include fastcgi_params;
+	fastcgi_pass wordpress:9000;
+	fastcgi_index index.php;
+	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	fastcgi_param HTTPS on;	
+	fastcgi_param HTTP_X_FORWARDED_FOR   $proxy_add_x_forwarded_for;
+	fastcgi_param HTTP_X_FORWARDED_PROTO $scheme;
+	}
 }
 
