--- a/srcs/.env
+++ b/srcs/.env
@@ -7,5 +7,12 @@ DB_ADMIN_PASSWORD=42school
 DB_PASSWORD=42school
 DB_HOST=maria-db
 
+DOMAIN_NAME=apaterno.42.fr
 
+WP_ADMIN_USER=superuser
+WP_ADMIN_PASS=42school
+WP_ADMIN_EMAIL=apaterno@student.42barcelona.com
 
+WP_USER=user1
+WP_USER_PASS=42school
+WP_USER_EMAIL=apaterno@student.42barcelona.com
