--- a/srcs/requirements/nginx/conf/san.cnf
+++ b/srcs/requirements/nginx/conf/san.cnf
@@ -1,13 +1,20 @@
 [req]
-distinguished_name = req_distinguished_name
-req_extensions     = v3_req
-prompt = no
+default_bits       = 2048
+prompt             = no
+default_md         = sha256
+req_extensions     = req_ext
+distinguished_name = dn
 
-[req_distinguished_name]
+[dn]
+C  = ES
+ST = Barcelona
+L  = Barcelona:
+O  = 42School
 CN = apaterno.42.fr
 
-[v3_req]
+[req_ext]
 subjectAltName = @alt_names
 
 [alt_names]
-DNS.1 = apaterno.42.fr
+DNS.1   = apaterno.42.fr
+
