minor modifications .env file

--- a/srcs/.env
+++ b/srcs/.env
@@ -15,4 +15,4 @@ WP_ADMIN_EMAIL=apaterno@student.42barcelona.com
 
 WP_USER=user1
 WP_USER_PASS=42school
-WP_USER_EMAIL=apaterno@student.42barcelona.com
+WP_USER_EMAIL=agustinpaternoster@gmail.com
