--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,10 +1,10 @@
 # --- HTTP server: redirige a HTTPS ---
-server {
-    listen 80;
-    server_name apaterno.42.fr;
-
-    return 301 https://$host$request_uri;
-}
+#server {
+#    listen 80;
+#    server_name apaterno.42.fr;
+#
+#    return 301 https://$host$request_uri;
+#}
 
 # --- HTTPS server principal ---
 server {
