--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -10,8 +10,12 @@ services:
       - back-end
     env_file:
       - .env
+    environment:
+      DB_ADMIN_PASSWORD: /run/secrets/db_admin_pass
     secrets:
       - db_root_pass
+      - db_admin_pass
+      - 
     restart: unless-stopped
 
   wordpress:
@@ -71,5 +75,9 @@ volumes:
 secrets:
   db_root_pass:
     file: ../secrets/db_root_pass.txt
+  db_admin_pass:
+    file: ../secrets/db_admin_pass.txt
+  db_user_pass:
+    file: 
     
 
