--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -12,10 +12,10 @@ services:
       - .env
     environment:
       DB_ADMIN_PASSWORD: /run/secrets/db_admin_pass
+      DB_ROOT_PASSWOR: /run/secrets/db_root_pass
     secrets:
       - db_root_pass
       - db_admin_pass
-      - 
     restart: unless-stopped
 
   wordpress:
@@ -77,7 +77,5 @@ secrets:
     file: ../secrets/db_root_pass.txt
   db_admin_pass:
     file: ../secrets/db_admin_pass.txt
-  db_user_pass:
-    file: 
     
 
