--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - .env
     environment:
       DB_ADMIN_PASSWORD: /run/secrets/db_admin_pass
-      DB_ROOT_PASSWOR: /run/secrets/db_root_pass
+      DB_ROOT_PASSWORD: /run/secrets/db_root_pass
     secrets:
       - db_root_pass
       - db_admin_pass
