--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -13,9 +13,11 @@ services:
     environment:
       DB_ADMIN_PASSWORD: /run/secrets/db_admin_pass
       DB_ROOT_PASSWORD: /run/secrets/db_root_pass
+      DB_USER_PASSWORD: /run/secretes/db_user_pass
     secrets:
       - db_root_pass
       - db_admin_pass
+      - db_user_pass
     restart: unless-stopped
 
   wordpress:
@@ -77,5 +79,7 @@ secrets:
     file: ../secrets/db_root_pass.txt
   db_admin_pass:
     file: ../secrets/db_admin_pass.txt
+  db_user_pass:
+    file: ../secrets/db_user_pass.txt
     
 
