--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     environment:
       DB_ADMIN_PASSWORD: /run/secrets/db_admin_pass
       DB_ROOT_PASSWORD: /run/secrets/db_root_pass
-      DB_USER_PASSWORD: /run/secrets/db_user_pass
+      DB_USER_PASSWORD: /run/secrets/db_user_password
     secrets:
       - db_root_pass
       - db_admin_pass
@@ -34,6 +34,10 @@ services:
       - front-end
     env_file:
       - .env
+    environment:
+      DB_USER_PASSWORD: /run/secrets/db_user_password
+    secrets:
+      - db_user_pass
     restart: unless-stopped
 
   nginx:
