fixing errors on db_user_pass

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     secrets:
       - db_root_pass
       - db_admin_pass
+      - db_user_pass
     restart: unless-stopped
 
   wordpress:
