fixing errors on db_user_pass 2

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -30,6 +30,10 @@ services:
       - front-end
     env_file:
       - .env
+    secrets:
+      - db_root_pass
+      - db_admin_pass
+      - db_user_pass
     restart: unless-stopped
 
   nginx:
